# stocks-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  deps.py  main.py
app/api/: __init__.py  agent.py  auth.py  config.py  dashboard.py  fundamentals.py  knowledge.py  market.py  mcp.py  memory.py  news.py  portfolio.py  roles.py  scheduler.py  skills.py  tools.py  tracing.py  users.py  watchlist.py
app/core/: app_store.py  app_store_defs.py  logging.py  security.py
app/schemas/: __init__.py  auth.py  config.py  dashboard.py  fundamentals.py  knowledge.py  market.py  mcp.py  memory.py  news.py  portfolio.py  skills.py  (+4 more)
docs/: longbridge.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
output/: a_stock_signal_20260518.md
scripts/: deploy_vps.sh  update_vps.sh
tests/: test_app_store_security.py  test_auth_security.py  test_clawhub_api.py  test_clawhub_service.py  test_codex_auth.py  test_config_llm_modes.py  test_dashboard_service.py  test_fundamental_service.py  test_llm_provider.py  test_market_data_tools.py  test_market_service.py  test_mcp_timeout.py  test_memory_manager.py  test_multi_agent.py  test_news_service.py  test_orm_repositories.py  test_portfolio_positions_tool.py  test_portfolio_service.py  test_portfolio_tool.py  test_scheduler_tool.py  test_skill_delete.py  test_technical_indicators.py  test_tool_permissions.py  test_user_workspace.py  test_watchlist_api.py  test_watchlist_tool.py
(+141 files in other folders)
