[project]
name = "stocks-assistant"
version = "0.1.0"
description = "AI Agent service with memory, knowledge, skills and tools"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "croniter>=2.0.0",
    "mcp>=1.0.0",
    "longbridge==4.0.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
